--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,11 @@
     </style>
 
     <style name="Theme.CarRentalMVVM" parent="Base.Theme.CarRentalMVVM" />
+
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
+        <item name="android:windowFullscreen">true</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/bgsplash</item>
+        <item name="postSplashScreenTheme">@style/Base.Theme.CarRentalMVVM</item>
+    </style>
+
 </resources>
