--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -22,7 +22,7 @@
                 android:layout_marginStart="38dp"
                 android:layout_marginTop="102dp"
                 android:fontFamily="@font/imprima_regular"
-                android:text="Sign Up"
+                android:text="@string/sign_up"
                 android:textColor="@color/black"
                 android:textSize="48sp" />
 
@@ -45,7 +45,7 @@
                     android:layout_marginStart="45dp"
                     android:layout_marginTop="82dp"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="FULL NAME"
+                    android:text="@string/full_name"
                     android:textColor="@color/dark_teal"
                     android:textSize="16sp" />
 
@@ -54,10 +54,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvName"
-                    android:layout_marginStart="45dp"
+                    android:layout_marginStart="40dp"
                     android:layout_marginTop="11dp"
                     android:layout_marginEnd="39dp"
-                    android:hint="Lorem Ipsum"/>
+                    android:hint="@string/lorem_ipsum"
+                    android:minHeight="48dp" />
 
 
                 <TextView
@@ -68,7 +69,7 @@
                     android:layout_marginStart="45dp"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="EMAIL OR PHONE"
+                    android:text="@string/email_or_phone"
                     android:textColor="@color/dark_teal"
                     android:textSize="16sp" />
 
@@ -77,10 +78,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvUsername"
-                    android:layout_marginStart="45dp"
+                    android:layout_marginStart="40dp"
                     android:layout_marginTop="11dp"
                     android:layout_marginEnd="39dp"
-                    android:hint="Loremipsum@gmail.com" />
+                    android:hint="@string/loremipsum_gmail_com"
+                    android:minHeight="48dp" />
 
 
                 <TextView
@@ -91,28 +93,31 @@
                     android:layout_marginStart="45dp"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="PASSWORD"
+                    android:text="@string/password"
                     android:textColor="@color/dark_teal"
                     android:textSize="16sp" />
 
-                <EditText
-                    android:id="@+id/edtPassword"
+                <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/tvPassword"
-                    android:layout_marginStart="45dp"
-                    android:layout_marginTop="11dp"
-                    android:layout_marginEnd="39dp"
-                    android:inputType="textPassword"
-                    android:paddingEnd="20dp" />
+                    android:layout_marginTop="280dp">
 
-                <ImageView
-                    android:id="@+id/imageViewEye"
-                    android:layout_width="30dp"
-                    android:layout_height="32dp"
-                    android:layout_below="@+id/tvPassword"
-                    android:layout_marginStart="300dp"
-                    android:src="@drawable/ic_eye" />
+                    <EditText
+                        android:id="@+id/edtPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginEnd="39dp"
+                        android:inputType="textPassword"/>
+
+                    <ImageView
+                        android:id="@+id/imageViewEye"
+                        android:layout_width="wrap_content"
+                        android:layout_height="32dp"
+                        android:layout_marginStart="300dp"
+                        android:src="@drawable/ic_eye" />
+                </FrameLayout>
+
 
             </RelativeLayout>
 
@@ -120,7 +125,7 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="349dp"
                 android:layout_height="55dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="35dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/bg_dark_teal_button"
                 android:fontFamily="@font/inter_medium"
@@ -141,9 +146,9 @@
                 <TextView
                     android:layout_width="201dp"
                     android:layout_height="17dp"
-                    android:layout_marginStart="25dp"
+                    android:layout_marginStart="35dp"
                     android:fontFamily="@font/inter_medium"
-                    android:text="Have an account Already?" />
+                    android:text="@string/have_an_account_already" />
 
                 <TextView
                     android:id="@+id/txtSignin"
@@ -151,7 +156,7 @@
                     android:layout_height="20dp"
                     android:layout_marginStart="80dp"
                     android:fontFamily="@font/inter_medium"
-                    android:text="SIGN IN"
+                    android:text="@string/sign_in"
                     android:textColor="@color/golden_rod"
                     android:textStyle="italic" />
             </LinearLayout>
