--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -111,6 +111,7 @@
 
                     <ImageView
                         android:id="@+id/imageViewEye"
+                        android:layout_marginTop="7dp"
                         android:layout_width="wrap_content"
                         android:layout_height="32dp"
                         android:layout_marginStart="300dp"
