--- a/app/src/main/res/drawable/bg_pale_taupe_button.xml
+++ b/app/src/main/res/drawable/bg_pale_taupe_button.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFFFFF" />
     <stroke
-        android:color="#2B4C59"
-        android:width="2dp" />
-    <corners android:radius="5dp" />
+        android:width="1dp"
+        android:color="#988080"/>
+    <corners
+        android:radius="8dp"
+    />
 </shape>
