--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,9 @@
     <color name="white_light">#FFFFFF</color>
     <color name="light_gray">#F6F6F6</color>
     <color name="rosy_brown">#CCBDBD</color>
+    <color name="pale_taupe">#988080 </color>
+    <color name="deep_jungle_greenl">#200D0D0E</color>
+    <color name="light_grayish_cyan">#BECEDA</color>
+    <color name="light_silver">#C8C8C8</color>
+
 </resources>
