--- a/app/src/main/res/layout/cars_favorites_item_layout.xml
+++ b/app/src/main/res/layout/cars_favorites_item_layout.xml
@@ -107,12 +107,14 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/btnIncrease"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="15dp"
                 android:src="@drawable/ic_plus" />
 
             <TextView
+                android:id="@+id/txtQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -122,6 +124,7 @@
                 android:textSize="12sp" />
 
             <ImageView
+                android:id="@+id/btnReduce"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
