--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -44,7 +44,7 @@
                     android:layout_marginStart="38dp"
                     android:layout_marginTop="82dp"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="@string/email_or_phone"
+                    android:text="@string/username"
                     android:textColor="@color/dark_teal"
                     android:textSize="16sp" />
 
@@ -54,10 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvUsername"
                     android:layout_marginStart="35dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="39dp"
-                    android:hint="@string/loremipsum_gmail_com"
-                    android:minHeight="48dp" />
+                    android:layout_marginEnd="39dp"/>
 
 
                 <TextView
@@ -83,8 +80,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="35dp"
                         android:layout_marginEnd="39dp"
-                        android:inputType="textPassword"
-                        tools:ignore="TouchTargetSizeCheck" />
+                        android:inputType="textPassword"/>
 
                     <ImageView
                         android:id="@+id/imageViewEye"
