--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -113,7 +113,7 @@
                 android:fontFamily="@font/inter_medium"
                 android:paddingTop="14dp"
                 android:paddingBottom="14dp"
-                android:text="@string/log_in"
+                android:text="@string/submit"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
@@ -138,7 +138,7 @@
                     android:layout_height="20dp"
                     android:layout_marginStart="80dp"
                     android:fontFamily="@font/inter_medium"
-                    android:text="@string/log_in"
+                    android:text="@string/sign_up"
                     android:textColor="@color/golden_rod"
                     android:textStyle="italic" />
             </LinearLayout>
