--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -54,9 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvName"
                     android:layout_marginStart="40dp"
-                    android:layout_marginTop="11dp"
                     android:layout_marginEnd="39dp"
-                    android:hint="@string/lorem_ipsum"
                     android:minHeight="48dp" />
 
 
@@ -68,7 +66,7 @@
                     android:layout_marginStart="45dp"
                     android:layout_marginTop="18dp"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="@string/email_or_phone"
+                    android:text="@string/username"
                     android:textColor="@color/dark_teal"
                     android:textSize="16sp" />
 
@@ -78,9 +76,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvUsername"
                     android:layout_marginStart="40dp"
-                    android:layout_marginTop="11dp"
                     android:layout_marginEnd="39dp"
-                    android:hint="@string/loremipsum_gmail_com"
                     android:minHeight="48dp" />
 
 
@@ -131,7 +127,7 @@
                 android:fontFamily="@font/inter_medium"
                 android:paddingTop="14dp"
                 android:paddingBottom="14dp"
-                android:text="@string/log_in"
+                android:text="@string/submit"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
