--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -8,7 +8,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,7 +53,10 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvUsername"
                     android:layout_marginStart="35dp"
-                    android:layout_marginEnd="39dp"/>
+                    android:layout_marginEnd="39dp"
+                    android:minHeight="48dp"
+                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields"
+                    android:importantForAutofill="no" />
 
 
                 <TextView
@@ -67,7 +69,8 @@
                     android:fontFamily="@font/roboto_medium"
                     android:text="@string/password"
                     android:textColor="@color/dark_teal"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    tools:ignore="TextSizeCheck" />
 
                 <FrameLayout
                     android:layout_width="match_parent"
@@ -80,18 +83,19 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="35dp"
                         android:layout_marginEnd="39dp"
-                        android:inputType="textPassword"/>
+                        android:inputType="textPassword"
+                        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
+                        android:importantForAutofill="no" />
 
                     <ImageView
                         android:id="@+id/imageViewEye"
                         android:layout_marginTop="7dp"
                         android:layout_width="wrap_content"
                         android:layout_height="32dp"
-                        android:layout_marginStart="300dp"
-                        android:src="@drawable/ic_eye" />
+                        android:layout_marginStart="285dp"
+                        android:src="@drawable/ic_eye"
+                        android:importantForAccessibility="no" />
                 </FrameLayout>
-
-
             </RelativeLayout>
 
             <TextView
@@ -107,7 +111,7 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="349dp"
                 android:layout_height="55dp"
-                android:layout_marginStart="35dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/bg_dark_teal_button"
                 android:fontFamily="@font/inter_medium"
@@ -130,7 +134,8 @@
                     android:layout_height="17dp"
                     android:layout_marginStart="35dp"
                     android:fontFamily="@font/inter_medium"
-                    android:text="@string/don_t_have_an_account_yet" />
+                    android:text="@string/don_t_have_an_account_yet"
+                    tools:ignore="TextSizeCheck" />
 
                 <TextView
                     android:id="@+id/txtSignup"
@@ -140,7 +145,8 @@
                     android:fontFamily="@font/inter_medium"
                     android:text="@string/sign_up"
                     android:textColor="@color/golden_rod"
-                    android:textStyle="italic" />
+                    android:textStyle="italic"
+                    tools:ignore="TextSizeCheck,TextContrastCheck" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
