--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,114 +5,115 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginStart="38dp"
+            android:layout_marginTop="102dp"
+            android:layout_marginEnd="181dp"
+            android:fontFamily="@font/imprima_regular"
+            android:text="@string/sign_in"
+            android:textColor="@color/black"
+            android:textSize="48sp" />
+
+        <TextView
+            android:layout_width="58sp"
+            android:layout_height="4dp"
+            android:layout_marginStart="45dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_divide" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
+                android:id="@+id/tvUsername"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="38dp"
-                android:layout_marginTop="102dp"
-                android:layout_marginEnd="181dp"
-                android:fontFamily="@font/imprima_regular"
-                android:text="@string/sign_in"
-                android:textColor="@color/black"
-                android:textSize="48sp" />
+                android:layout_marginTop="80dp"
+                android:fontFamily="@font/roboto_medium"
+                android:text="@string/username"
+                android:textColor="@color/dark_teal"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/edtUsername"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="38dp"
+                android:importantForAutofill="no"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tvUsername"
+                app:layout_constraintTop_toBottomOf="@+id/tvUsername"
+                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields" />
 
             <TextView
-                android:layout_width="58sp"
-                android:layout_height="4dp"
-                android:layout_marginStart="45dp"
+                android:id="@+id/tvPassword"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/bg_divide" />
+                android:fontFamily="@font/roboto_medium"
+                android:text="@string/password"
+                android:textColor="@color/dark_teal"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/edtUsername"
+                app:layout_constraintTop_toBottomOf="@+id/edtUsername" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/edtPassword"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="38dp"
+                android:importantForAutofill="no"
+                android:inputType="textPassword"
+                android:maxLength="40"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tvPassword"
+                app:layout_constraintTop_toBottomOf="@+id/tvPassword"
+                tools:ignore="LabelFor,SpeakableTextPresentCheck" />
 
-                <TextView
-                    android:id="@+id/tvUsername"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="38dp"
-                    android:layout_marginTop="82dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="@string/username"
-                    android:textColor="@color/dark_teal"
-                    android:textSize="16sp" />
-
-                <EditText
-                    android:id="@+id/edtUsername"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tvUsername"
-                    android:layout_marginStart="35dp"
-                    android:layout_marginEnd="39dp"
-                    android:minHeight="48dp"
-                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields"
-                    android:importantForAutofill="no" />
-
-
-                <TextView
-                    android:id="@+id/tvPassword"
-                    android:layout_width="131dp"
-                    android:layout_height="18dp"
-                    android:layout_below="@+id/edtUsername"
-                    android:layout_marginStart="38dp"
-                    android:layout_marginTop="28dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="@string/password"
-                    android:textColor="@color/dark_teal"
-                    android:textSize="16sp"
-                    tools:ignore="TextSizeCheck" />
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="200dp">
-
-                    <EditText
-                        android:id="@+id/edtPassword"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="35dp"
-                        android:layout_marginEnd="39dp"
-                        android:inputType="textPassword"
-                        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
-                        android:importantForAutofill="no" />
-
-                    <ImageView
-                        android:id="@+id/imageViewEye"
-                        android:layout_marginTop="7dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="32dp"
-                        android:layout_marginStart="285dp"
-                        android:src="@drawable/ic_eye"
-                        android:importantForAccessibility="no" />
-                </FrameLayout>
-            </RelativeLayout>
+            <ImageView
+                android:id="@+id/imageViewEye"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginEnd="50dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_eye"
+                app:layout_constraintBottom_toBottomOf="@+id/edtPassword"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="42dp"
-                android:layout_marginTop="12dp"
+                android:id="@+id/textView2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/inter_medium"
                 android:text="@string/forgot_password"
-                android:textSize="11sp" />
+                android:textSize="11sp"
+                app:layout_constraintStart_toStartOf="@+id/edtPassword"
+                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
 
             <TextView
                 android:id="@+id/btnLogin"
                 android:layout_width="349dp"
                 android:layout_height="55dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/bg_dark_teal_button"
                 android:fontFamily="@font/inter_medium"
                 android:paddingTop="14dp"
@@ -120,34 +121,34 @@
                 android:text="@string/submit"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
 
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/inter_medium"
+                android:text="@string/don_t_have_an_account_yet"
+                app:layout_constraintStart_toStartOf="@+id/btnLogin"
+                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+                tools:ignore="TextSizeCheck" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="201dp"
-                    android:layout_height="17dp"
-                    android:layout_marginStart="35dp"
-                    android:fontFamily="@font/inter_medium"
-                    android:text="@string/don_t_have_an_account_yet"
-                    tools:ignore="TextSizeCheck" />
-
-                <TextView
-                    android:id="@+id/txtSignup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_marginStart="80dp"
-                    android:fontFamily="@font/inter_medium"
-                    android:text="@string/sign_up"
-                    android:textColor="@color/golden_rod"
-                    android:textStyle="italic"
-                    tools:ignore="TextSizeCheck,TextContrastCheck" />
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+            <TextView
+                android:id="@+id/txtSignup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/inter_medium"
+                android:text="@string/sign_up"
+                android:textColor="@color/golden_rod"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="@+id/textView3"
+                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
+                tools:ignore="TextSizeCheck,TextContrastCheck" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
