--- a/app/src/main/res/layout/cars_item_layout.xml
+++ b/app/src/main/res/layout/cars_item_layout.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="180dp"
     android:layout_height="180dp"
-    android:layout_margin="8dp">
+    android:layout_margin="4dp">
 
     <ImageView
-        android:id="@+id/pic"
+        android:id="@+id/imgCar"
         android:layout_width="180dp"
         android:layout_height="match_parent"
         android:background="@drawable/bg_grey"
-        android:src="@drawable/toyota"
+        android:importantForAccessibility="no"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,14 +32,29 @@
             android:textColor="@color/dark_teal"
             android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/txtPrice"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:fontFamily="@font/ptsans_regular"
-            android:textColor="@color/black"
-            android:textSize="13sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/ptsans_regular"
+                android:textColor="@color/black"
+                android:textSize="13sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/ptsans_regular"
+                android:text="@string/day"
+                android:textColor="@color/pale_taupe"
+                android:textSize="13sp"
+                tools:ignore="TextContrastCheck" />
+        </LinearLayout>
     </LinearLayout>
 
 
@@ -53,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="115dp"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_favorite" />
 
         <ImageView
@@ -60,6 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_arrow_down" />
     </LinearLayout>
 
