--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -120,14 +120,15 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="450dp"
         android:id="@+id/recyclerView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginTop="450dp"
+        android:layout_marginBottom="60dp"
         android:clipToPadding="false"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNearYou" />
+        app:layout_constraintTop_toBottomOf="@+id/ln2"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
