--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,5 @@
     <color name="deep_jungle_greenl">#200D0D0E</color>
     <color name="light_grayish_cyan">#BECEDA</color>
     <color name="light_silver">#C8C8C8</color>
-
+    <color name="light_grayish_red">#ADA7A7</color>
 </resources>
