Create payment info screen and Create payment Function

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,7 @@
     <color name="light_grayish_cyan">#BECEDA</color>
     <color name="light_silver">#C8C8C8</color>
     <color name="light_grayish_red">#ADA7A7</color>
+    <color name="lime_green">#6AC649</color>
+    <color name="dark_gray">#676767</color>
+    <color name="gray_light">#6B6B6B</color>
 </resources>
