--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
-                    android:layout_marginTop="57dp"
+                    android:layout_marginTop="40dp"
                     android:importantForAccessibility="no"
                     android:src="@drawable/ic_next"
                     tools:ignore="ImageContrastCheck" />
@@ -40,7 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="340dp"
-                    android:layout_marginTop="57dp"
+                    android:layout_marginTop="40dp"
                     android:importantForAccessibility="no"
                     android:src="@drawable/ic_menu_horizontal"
                     tools:ignore="ImageContrastCheck" />
@@ -284,6 +284,7 @@
                     tools:ignore="ImageContrastCheck" />
 
                 <TextView
+                    android:id="@+id/btnBookNow"
                     android:layout_width="180dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="21dp"
